--- a/aulateste/hotel/templates/homepage.html
+++ b/aulateste/hotel/templates/homepage.html
@@ -7,8 +7,8 @@
 
 {% block body %}
         {% for item in dados_hotel %}
-            <div class="card" style="width: 30rem;">
-                <img src="{{item.logo.url}}" alt="">
+            <div class="card" style="width: 30rem; margin: 80px;">
+                <img src="{{item.logo.url}}" alt="quarto">
                 <div class="card-body">
                   <p class="card-text">{{item.descricao}}</p>
                 </div>
