--- a/aulateste/templates/footer.html
+++ b/aulateste/templates/footer.html
@@ -1,14 +1,15 @@
-<div class="card">
-    <div class="card-body">
-      <nav aria-label="Page navigation example">
-        <ul class="pagination">
-          <li class="page-item"><a class="page-link" href="#">Veja Mais</a></li>
+<div class="card" style="position: fixed; bottom: 0; width: 100%; padding-right: 10px;">
+    <nav aria-label="Page navigation example" style="margin-top:20px;">
+        <ul class="pagination justify-content-end">
+          <li class="page-item disabled">
+            <a class="page-link">Previous</a>
+          </li>
           <li class="page-item"><a class="page-link" href="#">1</a></li>
           <li class="page-item"><a class="page-link" href="#">2</a></li>
           <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+          </li>
         </ul>
-      </nav>
-      
-    </div>
-  </div>
+    </nav> 
+</div>
