--- a/aulateste/templates/navbar.html
+++ b/aulateste/templates/navbar.html
@@ -1,5 +1,25 @@
-<nav class="navbar navbar-expand-lg bg-primary">
-    <div class="container-fluid">
-    <a class="navbar-brand text-white" href="#">Hotel Senai</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Hotel Senai</a>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Início</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Cadastro</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Preço</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Reserva de Quartos</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Solteiro</a>
+                    <a class="dropdown-item" href="#">Casal</a>
+                    <a class="dropdown-item" href="#">Comfort</a>
+                    <a class="dropdown-item" href="#">Luxo</a>
+                </div>
+            </li>
+        </ul>
     </div>
 </nav>
