--- a/aulateste/templates/footer.html
+++ b/aulateste/templates/footer.html
@@ -1,15 +1,11 @@
-<div class="card" style="position: fixed; bottom: 0; width: 100%; padding-right: 10px;">
-    <nav aria-label="Page navigation example" style="margin-top:20px;">
-        <ul class="pagination justify-content-end">
-          <li class="page-item disabled">
-            <a class="page-link">Previous</a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#">Next</a>
-          </li>
-        </ul>
-    </nav> 
-</div>
+<footer>
+  <div style="text-align: center; background-color: rgb(191, 216, 232); gap: 20px;">
+    <p style="justify-content: center; display: flex; text-align: center; gap: 20px;">Desenvolvido por <a href="#" style="color: #622626; text-decoration: none;">Yuri Azevedo</a></p>
+    <div style="justify-content: center; display: flex; gap: 20px;">
+        <p>Siga-nos nas redes sociais:</p>
+        <a href="#" style="margin-right: 10px; color: #622b2b; text-decoration: none;">Facebook</a>
+        <a href="#" style="margin-right: 10px; color: #693535; text-decoration: none;">Twitter</a>
+        <a href="#" style="color: #3b0b0b; text-decoration: none;">Instagram</a>
+    </div>
+  </div>
+</footer>
