--- a/aulateste/templates/navbar.html
+++ b/aulateste/templates/navbar.html
@@ -1,24 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Hotel Senai</a>
+    <a class="navbar-brand" href="http://127.0.0.1:8000">Cacique Hotel's</a>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Início</a>
-            </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Cadastro</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Preço</a>
+                <a class="nav-link" href="http://127.0.0.1:8000/nome">Cadastro</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Reserva de Quartos</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Solteiro</a>
-                    <a class="dropdown-item" href="#">Casal</a>
-                    <a class="dropdown-item" href="#">Comfort</a>
-                    <a class="dropdown-item" href="#">Luxo</a>
-                </div>
+                <a class="nav-link" href="http://127.0.0.1:8000/quartos">Quartos</a>
             </li>
         </ul>
     </div>
