Update criação e estilização dos quartos

--- a/aulateste/templates/footer.html
+++ b/aulateste/templates/footer.html
@@ -1,11 +1,4 @@
-<footer>
-  <div style="text-align: center; background-color: rgb(191, 216, 232); gap: 20px;">
-    <p style="justify-content: center; display: flex; text-align: center; gap: 20px;">Desenvolvido por <a href="#" style="color: #622626; text-decoration: none;">Yuri Azevedo</a></p>
-    <div style="justify-content: center; display: flex; gap: 20px;">
-        <p>Siga-nos nas redes sociais:</p>
-        <a href="#" style="margin-right: 10px; color: #622b2b; text-decoration: none;">Facebook</a>
-        <a href="#" style="margin-right: 10px; color: #693535; text-decoration: none;">Twitter</a>
-        <a href="#" style="color: #3b0b0b; text-decoration: none;">Instagram</a>
-    </div>
-  </div>
+<footer style="display: flex; justify-content: center; padding: 10px; color: #fff; background-color: rgb(53, 52, 52); text-align: center; gap: 10px; ">
+  <p>® Todos os direitos reservados - Hotel Company 2024</p> 
+  <a href="https://github.com/Projectyuuri07/Teste_django"> <i class="bi bi-github" style="color: #fff;"></i></a>
 </footer>
