--- a/aulateste/hotel/templates/homepage.html
+++ b/aulateste/hotel/templates/homepage.html
@@ -6,9 +6,9 @@
 {% endblock %}
 
 {% block body %}
+<div class="container" style="display: flex;  justify-content: center; justify-items: center; ">
         {% for item in dados_hotel %}
-
-        <div class="card" style="width: 35rem; margin: 20px; text-align: center; padding: 20px;">
+        <div class="card" style="width: 30rem; margin: 30px; text-align: center; padding: 20px;">
           <h1 class="title">Cacique Hotel's</h1>
           <img src="{{item.logo.url}}" alt="quarto">
           <div class="card-body">
@@ -17,8 +17,6 @@
             <a href="http://127.0.0.1:8000/quartos" class="btn btn-primary">Reserve</a>
           </div>
         </div>
-        
-
         {% endfor %}
-
+</div>
 {% endblock %}
