--- a/aulateste/hotel/templates/quartos.html
+++ b/aulateste/hotel/templates/quartos.html
@@ -6,10 +6,11 @@ Reserve Já
 {% endblock %}
 
 {% block body %}
+<div>
 <div class="container mt-3">
     <div class="row" style="display: flex;  justify-content: center; justify-items: center; ">
         {% for item in dados_quarto %}
-        <div class="card" style="width: 30rem; margin: 10px; text-align: center; padding: 10px; ">
+        <div class="card" style="width: 30rem; margin: 10px; text-align: center; padding: 10px; background-color: rgba(29, 27, 27, 0.7); color: #fff; ">
             <h3 class="title">Cacique Hotel's</h3>
             <img src="{{item.foto_quarto.url}}" alt="quarto">
             <div class="card-body ">
