--- a/aulateste/hotel/templates/nome.html
+++ b/aulateste/hotel/templates/nome.html
@@ -1,15 +1,75 @@
 {% extends 'index.html' %}
 
 {% block title %}
-    Hotel Cacique - Nome
+    Cacique Hotel's - NOME
 {% endblock %}
 
+{% block head %}
+    <style>
+        body {
+            background-color: hsl(212, 17%, 57%);
+        }
+
+        input[type="text"],
+        input[type="email"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin-top: 6px;
+            margin-bottom: 16px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        button[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            border-radius: 4px;
+            background-color: #007bff;
+            color: white;
+            cursor: pointer;
+        }
+        label {
+            color: white;
+            margin-bottom: 6px;
+            display: block;
+        }
+    </style>
+{% endblock %}
 {% block body %}
-
-    <form action="nome" method="post">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Submit">
-    </form>
-
+    <div class="container p-3 "">
+        <div class="row justify-content-center rounded-5">
+            <div class="col-lg-6">
+                <div class="bg-dark p-3 border">
+                    <h2 class="text-center text-white">Cadastrar-se</h2>
+                    <form action="nome" method="post ">
+                        {% csrf_token %}
+                        <div class="mb-2">
+                            <label for="id_nome">Nome:</label>
+                            {{ form.nome }}
+                        </div>
+                        <div class="mb-2">
+                            <label for="id_sobrenome">Sobrenome:</label>
+                            {{ form.sobrenome }}
+                        </div>
+                        <div class="mb-2">
+                            <label for="id_email">E-mail:</label>
+                            {{ form.email }} 
+                        </div>
+                        <div class="mb-2">
+                            <label for="id_telefone">Telefone:</label>
+                            {{ form.telefone }}
+                        </div>
+                        <div class="mb-2">
+                            <label for="id_senha">Senha:</label>
+                            {{ form.senha }}
+                        </div>
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
+
