--- a/aulateste/hotel/templates/quartos.html
+++ b/aulateste/hotel/templates/quartos.html
@@ -6,23 +6,20 @@ Reserve Já
 {% endblock %}
 
 {% block body %}
-<div>
-<div class="container mt-3">
-    <div class="row" style="display: flex;  justify-content: center; justify-items: center; ">
-        {% for item in dados_quarto %}
-        <div class="card" style="width: 30rem; margin: 10px; text-align: center; padding: 10px; background-color: rgba(29, 27, 27, 0.7); color: #fff; ">
-            <h3 class="title">Cacique Hotel's</h3>
-            <img src="{{item.foto_quarto.url}}" alt="quarto">
-            <div class="card-body ">
-                <div class="card-body">
-                    <h5 class="card-title">{{ item.tipo }}</h5>
-                    <p class="card-text">{{ item.descricao }}</p>
-                    <p class="card-text">Disponibilidade: {{ item.disponibilidade }}</p>
-                    <p class="card-text">R$ {{ item.valor }}</p>
-                </div>
+<div class="flex p-8" >
+    {% for item in dados_quarto %}
+    <div class="card p-2" style="width: 300px; height: 600px; justify-content: stretch; background-color: rgba(0, 0, 0, 0.3); color: #fff; border: 1px solid #fff;">
+        <h3 class="title">Cacique Hotel's</h3>
+        <img src="{{item.foto_quarto.url}}" alt="quarto">
+        <div class="card-body ">
+            <div class="card-body">
+                <h5 class="card-title">{{ item.tipo }}</h5>
+                <p class="card-text">{{ item.descricao }}</p>
+                <p class="card-text">Disponibilidade: {{ item.disponibilidade }}</p>
+                <p class="card-text">R$ {{ item.valor }}</p>
             </div>
         </div>
-        {% endfor %}
     </div>
+    {% endfor %}
 </div>
 {% endblock %}
