--- a/aulateste/hotel/templates/homepage.html
+++ b/aulateste/hotel/templates/homepage.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="flex p-2" >
+<div class="parallax p-2" >
         {% for item in dados_hotel %}
         <div class="card p-3" style="width: 30rem; margin: 30px; text-align: center; padding: 20px; display: flex;  justify-content: center; justify-items: center; color: #fff ;background-color: rgba(29, 27, 27, 0.7);">
           <h1 class="title">Cacique Hotel's</h1>
@@ -14,7 +14,7 @@
           <div class="card-body">
             <p class="card-text">{{item.descricao}}</p>
             <h5 class="subtitle">Seu conforto em primeiro lugar!</h5>
-            <a href="http://127.0.0.1:8000/quartos" class="btn btn-primary">Reserve</a>
+            <a href="http://127.0.0.1:8000/quartos" class="btn btn-primary">Quartos</a>
           </div>
         </div>
         {% endfor %}
