Update estilização da pagina de reserva

--- a/aulateste/hotel/templates/login.html
+++ b/aulateste/hotel/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 
 {% block title %}
-    Cacique Hotel's - NOME
+    Cacique Hotel's - LOGIN
 {% endblock %}
 
 {% block head %}
