--- a/aulateste/templates/navbar.html
+++ b/aulateste/templates/navbar.html
@@ -2,17 +2,17 @@
     <a class="navbar-brand" href="http://127.0.0.1:8000">Cacique Hotel's</a>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link" href="http://127.0.0.1:8000/quartos">Quartos</a>
+            </li>
             <li class="nav-item">
-                <a class="nav-link" href="http://127.0.0.1:8000/nome">Reserve</a>
+                <a class="nav-link" href="http://127.0.0.1:8000/reserva">Reserve</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link" href="http://127.0.0.1:8000/cadastro">Cadastro</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link" href="http://127.0.0.1:8000/login">Login</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link" href="http://127.0.0.1:8000/quartos">Quartos</a>
             </li>
         </ul>
     </div>
